--- a/wp-content/themes/vdc_DEV/scss/_toolkit.scss
+++ b/wp-content/themes/vdc_DEV/scss/_toolkit.scss
@@ -115,6 +115,8 @@
 
 //padding 
 
+
+
 .pt2{
 	padding-top: 2em;
 }
@@ -155,3 +157,33 @@
 .inline-block{
 	display: inline-block;
 }
+
+
+.grid {
+	/* Grid Fallback */
+	display: flex;
+	flex-wrap: wrap;
+
+	/* Supports Grid */
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+	grid-auto-rows: minmax(150px, auto);
+	grid-gap: 1em;
+}
+
+.module {
+	display: flex;
+	align-items: top;
+
+	/* Flex Fallback */
+	margin-left: 5px;
+	margin-right: 5px;
+}
+
+/* If Grid is supported, remove the margin we set for the fallback */
+@supports (display: grid) {
+	.module {
+		margin: 0;
+	}
+}
+
