--- a/wp-content/themes/vdc_DEV/scss/_variables.scss
+++ b/wp-content/themes/vdc_DEV/scss/_variables.scss
@@ -81,7 +81,18 @@ $oppsbg:			#f3f3f3;
 
 
 
+//  Screen Sizes
 
+$xs: 0px;
+
+//min-width:768px
+$sm: 768px;
+
+//min-width:992px
+$md: 992pxpx;
+
+//min-width:1200px
+$lg: 1200px;
 
 
 
